# school

./: .env.example  .gitignore  CONTRIBUTORS.md  README.md  manage.py  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: django.yml
classes/: admin.py  conftest.py  forms.py  models.py  tests.py  urls.py  views.py
classes/migrations/: 0001_initial.py  0002_remove_livecohort_end_date_and_more.py  0003_selfpacedlesson_selfpacedclassupload_and_more.py  0004_remove_selfpacedclass_students_and_more.py  0005_livecohort_end_date_livecohort_start_date_and_more.py  0006_livecohort_course_fees_livecohort_features_and_more.py  0006_livecohortassignment_attachment_and_more.py  0007_alter_livecohortassignment_cohort.py  0007_remove_livecohortquiz_points_and_more.py  0008_livecohortassignment_submission_optional.py  0008_livecohortquiz_livecohort_quizzes.py  0008_livecohortsession_video_recording_link_and_more.py  0009_livecohort_course_fees_livecohort_features_and_more.py  0009_livecohortwaitlist.py  0009_remove_livecohortquiz_points_and_more.py  0010_livecohort_is_active.py  0011_alter_livecohortwaitlist_unique_together.py
classes/templatetags/: classes_filters.py
fixtures/: classes.json
integrations/: emails.py  urls.py
integrations/google/: client.py
integrations/plunk/: client.py
integrations/stripe/: client.py
landing/: forms.py  inputs.py  service.py  urls.py  views.py
landing/migrations/: 0001_initial.py  0002_alter_profilecategory_options_and_more.py  0003_alter_profile_email_url_alter_profilelink_profile.py
landing/models/: __init__.py  profiles.py
landing/tests/: conftest.py  tests.py
languages/: models.py
languages/migrations/: 0001_initial.py
marketplace/: models.py
marketplace/migrations/: 0001_initial.py
quiz/: apps.py  models.py
quizzes/: models.py
quizzes/migrations/: 0001_initial.py  0002_remove_quizattempt_attempt_number_and_more.py
school/: settings.py  test_settings.py  urls.py
static/css/: app.css  input.css
templates/: about_us.html  courses.html  cta.html  faq.html  index.html  teachers.html  zcal.html
templates/classes/: add_live_cohort.html  add_private_package.html  assignment.html  assignments.html  assignments_component.html  dashboard.html  edit_assignment.html  edit_live_cohort.html  edit_session.html  quiz.html  quizzes_component.html  search_classes.html  sessions.html  sessions_component.html  students.html  teacher-dashboard.html  teacher_classes.html  teacher_dashboard.html  wait_list.html  wait_list_added.html
templates/landing/: create_profile.html  profile.html  profile_admin.html  update_profile.html
templates/marketplace/: teachers.html
templates/partials/: anonymous_base.html  base.html  footer.html  nav.html
templates/users/: login.html  signup.html
users/: admin.py  backends.py  conftest.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_externalprofile.py  0003_user_bio_user_location_user_profile_image.py  0004_signupinvite.py
