[project]
name = "school"
version = "0.1.0"
description = ""
authors = [{name = "Victor Neo", email = "victor@perchlook.com"}]
readme = "README.md"
requires-python = ">= 3.13"
dependencies = [
    "annotated-types==0.7.0",
    "arrow==1.3.0",
    "asgiref==3.9.1",
    "asttokens==3.0.0",
    "bcrypt==4.3.0",
    "binaryornot==0.4.4",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "click==8.2.1",
    "cookiecutter==2.6.0",
    "cryptography==44.0.1",
    "decorator==5.1.1",
    "deprecated==1.2.15",
    "django==5.2.5",
    "django-browser-reload==1.18.0",
    "django-debug-toolbar==6.0.0",
    "django-htmx==1.23.2",
    "django-types==0.22.0",
    "exceptiongroup==1.2.2",
    "execnet==2.1.1",
    "executing==2.2.0",
    "fabric==3.2.2",
    "google-api-core==2.25.1",
    "google-api-python-client==2.179.0",
    "google-auth==2.40.3",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.2",
    "googleapis-common-protos==1.70.0",
    "httplib2==0.22.0",
    "idna==3.10",
    "iniconfig==2.0.0",
    "invoke==2.2.0",
    "ipython==9.4.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "nodeenv==1.9.1",
    "oauthlib==3.3.1",
    "packaging==24.2",
    "paramiko==4.0.0",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.3.0",
    "pip==25.2",
    "pluggy==1.5.0",
    "prompt-toolkit==3.0.50",
    "proto-plus==1.26.0",
    "protobuf==5.29.3",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pygments==2.19.1",
    "pynacl==1.5.0",
    "pyparsing==3.2.1",
    "pyright==1.1.394",
    "pytest==8.4.1",
    "pytest-django==4.11.1",
    "pytest-xdist==3.8.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-http-client==3.3.7",
    "python-slugify==8.0.4",
    "pyyaml==6.0.2",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rich==14.1.0",
    "rsa==4.9.1",
    "sendgrid==6.12.4",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "stack-data==0.6.3",
    "starkbank-ecdsa==2.2.0",
    "stripe==12.5.0",
    "text-unidecode==1.3",
    "tomli==2.0.1",
    "traitlets==5.14.3",
    "types-psycopg2==2.9.21.20250809",
    "types-python-dateutil==2.9.0.20250822",
    "typing-extensions==4.15.0",
    "uritemplate==4.1.1",
    "urllib3==2.5.0",
    "uv==0.8.13",
    "wcwidth==0.2.13",
    "wheel==0.45.1",
    "wrapt==1.17.3",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "school.test_settings"
# -- recommended but optional:
python_files = ["tests.py"]

[tool.ruff.lint]
select = [
    # isort
    "I001"
]
fixable = ["ALL"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
